# cloudjit

./: README.md  attention.txt  module.json  out.txt  pom.xml
engines/c/: c.c  ir.ll
engines/io/: io.c  ir.ll
engines/l/: l.c
engines/test/: ir.ll  test.c
engines/testlib/: ir.ll  testlib.c
irParser/: CMakeLists.txt  ir.ll  llvm.cpp
jit/: CMakeLists.txt  autogen.h  compiler.sh  ir.ll  jit.cpp  jit.h  s.sh  txt
src/main/java/com/anuc/cloudJIT/: DemoApplication.java
src/main/java/com/anuc/cloudJIT/config/: mybatisPlusConfig.java
src/main/java/com/anuc/cloudJIT/controller/: FunctionController.java  ModuleController.java
src/main/java/com/anuc/cloudJIT/dao/: FuncInfoDao.java  ModuleInfoDao.java  RunLogDao.java
src/main/java/com/anuc/cloudJIT/entity/: ArgInfo.java  FuncInfo.java  Module.java  ModuleInfo.java  RunLog.java
src/main/java/com/anuc/cloudJIT/entity/responnse/: BaseResponse.java  FileUpLoadResponse.java  RunLogListResponse.java  RunResultResponse.java  SelectFunctionListResponse.java  SelectModuleListResponse.java  SelectOneModuleResponse.java
src/main/java/com/anuc/cloudJIT/service/: FuncInfoService.java  ModuleInfoService.java  RunLogService.java
src/main/resources/: application.properties
src/test/java/com/anuc/cloudJIT/: DemoApplicationTests.java
